--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -295,3 +295,7 @@ body {
 	background: url(/images/portfolio-background-header.jpg);
 }
 
+ul {
+    text-align: center;
+    list-style-position: inside;
+}
