Add contact page

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,148 +1,151 @@
 #content {
-  margin-left: auto;
-  margin-right: auto;
-  width: 650px;
-  text-align: center;
+	margin-left: auto;
+	margin-right: auto;
+	width: 650px;
+	text-align: center;
 }
 
 #greeting-container {
-  margin-top: 20px;
+	margin-top: 20px;
 }
 
-.header{
-    width: 100%;
-    height: 80px;
-    display: block;
-    background-color: #101010;
+.header {
+	width: 100%;
+	height: 80px;
+	display: block;
+	background-color: #101010;
 }
 
-.inner_header{
-    width: 1000px;
-    height: 100%;
-    display: block;
-    margin: 0 auto;
+.inner_header {
+	width: 1000px;
+	height: 100%;
+	display: block;
+	margin: 0 auto;
 }
 
-.logo_container{
-    height: 100%;
-    display: table;
-    float: left;
+.logo_container {
+	height: 100%;
+	display: table;
+	float: left;
 }
 
-.logo_container h1{
-    color: white;
-    height: 100%;
-    display: table-cell;
-    vertical-align: middle;
-    font-family: 'Montserrat';
-    font-size: 32px;
-    font-weight: 200;
+.logo_container h1 {
+	color: white;
+	height: 100%;
+	display: table-cell;
+	vertical-align: middle;
+	font-family: 'Montserrat';
+	font-size: 32px;
+	font-weight: 200;
 }
 
-.logo_container h1 span{
-    font-weight: 800;
+.logo_container h1 span {
+	font-weight: 800;
 }
 
 .navigation {
-    float: right;
-    height: 100%;
+	float: right;
+	height: 100%;
 }
 
-.navigation a{
-    height: 100%;
-    display: table;
-    float: left;
-    padding: 0px 20px;
+.navigation a {
+	height: 100%;
+	display: table;
+	float: left;
+	padding: 0px 20px;
 }
 
-.navigation a li{
-    display: table-cell;
-    vertical-align: middle;
-    height: 100%;
-    color: white;
-    font-family: 'Montserrat';
-    font-size: 16px;
+.navigation a li {
+	display: table-cell;
+	vertical-align: middle;
+	height: 100%;
+	color: white;
+	font-family: 'Montserrat';
+	font-size: 16px;
 }
 
-.navigation a:last-child{
-    padding-right: 0;
+.navigation a:last-child {
+	padding-right: 0;
 }
 
 footer {
-     position: fixed;
-   left: 0;
-   bottom: 0;
-   width: 100%;
-   background-color: black;
-   color: white;
-   text-align: center;
-}
-* {box-sizing:border-box}
-
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
-}
-
-.container {
-  position: relative;
-  width: 95%;
-}
-
-.image {
-  display: block;
-  width: 100%;
-  height: auto;
-}
-
-.overlay {
-  position: absolute;
-  bottom: 100%;
-  left: 0;
-  right: 0;
-  background-color: #008CBA;
-  overflow: hidden;
-  width: 95%;
-  height:0;
-  transition: .5s ease;
-}
-
-.container:hover .overlay {
-  bottom: 0;
-  height: 100%;
-}
-
-.text {
-  color: white;
-  font-size: 20px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  text-align: center;
+	position: fixed;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	background-color: black;
+	color: white;
+	text-align: center;
 }
 
 * {
-  box-sizing: border-box;
+	box-sizing: border-box
+}
+
+.slideshow-container {
+	max-width: 1000px;
+	position: relative;
+	margin: auto;
+}
+
+.container {
+	position: relative;
+	width: 95%;
+}
+
+.image {
+	display: block;
+	width: 100%;
+	height: auto;
+}
+
+.overlay {
+	position: absolute;
+	bottom: 100%;
+	left: 0;
+	right: 0;
+	background-color: #008CBA;
+	overflow: hidden;
+	width: 95%;
+	height: 0;
+	transition: .5s ease;
+}
+
+.container:hover .overlay {
+	bottom: 0;
+	height: 100%;
+}
+
+.text {
+	color: white;
+	font-size: 20px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	-webkit-transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+	text-align: center;
+}
+
+* {
+	box-sizing: border-box;
 }
 
 .column {
-  float: left;
-  width: 33.33%;
-  padding: 5px;
+	float: left;
+	width: 33.33%;
+	padding: 5px;
 }
 
 .row::after {
-  content: "";
-  clear: both;
-  display: table;
+	content: "";
+	clear: both;
+	display: table;
 }
 
 body {
-  background: url(/images/portfolio-background-header.jpg);
+	background: url(/images/portfolio-background-header.jpg);
 }
 
 #content {
@@ -296,6 +299,112 @@ body {
 }
 
 ul {
-    text-align: center;
-    list-style-position: inside;
+	text-align: center;
+	list-style-position: inside;
+}
+
+.contact {
+	box-sizing: border-box;
+	border: 2px solid #000;
+	cursor: pointer;
+	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
+	width: 650px;
+}
+
+.contact.active {
+	width: 800px;
+	min-height: 400px;
+}
+
+.contact.active:hover {
+	background: #fff;
+	color: #000;
+}
+
+.contact:hover {
+	background: #000;
+	color: #fff;
+}
+
+.contact h2 {
+	margin: 0;
+	padding: 20px;
+	width: 100%;
+	box-sizing: border-box;
+}
+
+.contact h2 span {
+	display: inline-block;
+}
+
+.contact.active h2 span {
+	transform: rotate(45deg);
+	float: right;
+}
+
+form {
+	padding: 20px;
+	box-sizing: border-box;
+}
+
+form .row {
+	width: 100%;
+	display: flex;
+	flex-wrap: wrap;
+}
+
+form .row .col-1 {
+	width: 100%;
+	box-sizing: border-box;
+	margin-bottom: 20px;
+}
+
+.contact label {
+	display: block;
+	font-size: 18px;
+	margin-bottom: 5px;
+	font-weight: bold;
+}
+
+.contact input.text,
+.contact textarea {
+	width: 100%;
+	border: 2px solid #000;
+	padding: 10px;
+	outline: none;
+	box-sizing: border-box;
+	font-weight: bold;
+	font-size: 18px;
+	font-family: consolas;
+	resize: none;
+}
+
+.contact textarea {
+	height: 150px;
+}
+
+.contact input[type="submit"] {
+	border: 2px solid #000;
+	padding: 10px;
+	font-size: 18px;
+	box-sizing: border-box;
+	font-weight: bold;
+	font-size: 18px;
+	font-family: consolas;
+	outline: none;
+	cursor: pointer;
+	background: #000;
+	color: #fff;
+}
+
+.contact form {
+	visibility: hidden;
+	display: none;
+}
+
+.contact.active form {
+	visibility: visible;
+	display: block;
 }
