--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -10,8 +10,8 @@
 }
 
 .header {
-	width: 100%;
-	height: 80px;
+	width: 80%;
+	height: 60px;
 	display: block;
 	background-color: #101010;
 }
@@ -66,16 +66,6 @@
 
 .navigation a:last-child {
 	padding-right: 0;
-}
-
-footer {
-	position: fixed;
-	left: 0;
-	bottom: 0;
-	width: 100%;
-	background-color: black;
-	color: white;
-	text-align: center;
 }
 
 * {
@@ -407,4 +397,17 @@ form .row .col-1 {
 .contact.active form {
 	visibility: visible;
 	display: block;
+}
+
+#footer{
+ 	text-align: center;
+}
+
+.social-wrapper {
+	text-align: center;
+}
+
+.social-wrapper ul li {
+	display: inline;
+	margin: 0 5px;
 }
