Add maps Library

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -411,3 +411,11 @@ form .row .col-1 {
 	display: inline;
 	margin: 0 5px;
 }
+
+#map {
+    border: thin solid black;
+    text-align:center;
+    height: 200px;
+    width: 300px;
+    margin: auto
+}
